--- a/Module3/CSS/Bootstrap cơ bản/bai_tap/landing pages/land.css
+++ b/Module3/CSS/Bootstrap cơ bản/bai_tap/landing pages/land.css
@@ -24,5 +24,88 @@
     line-height: 30px;
 }
 .content{
-    background-image: url(https://www.google.com/imgres?imgurl=https%3A%2F%2Fimg.freepik.com%2Ffree-photo%2Fabstract-background-with-low-poly-design_1048-8478.jpg%3Fw%3D2000&imgrefurl=https%3A%2F%2Fwww.freepik.com%2Ffree-photos-vectors%2Ftechnology-background&tbnid=Ilz-Ly7n_48MGM&vet=12ahUKEwjq0O2-74f6AhX2ktgFHYgbD0sQMyg7egQIARB1..i&docid=U6VMttfIazui4M&w=2000&h=1600&q=background%20image&ved=2ahUKEwjq0O2-74f6AhX2ktgFHYgbD0sQMyg7egQIARB1);
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
+.caption{
+    text-align: center;
+}
+#autoResize{
+    text-align: center;
+}
+.footer{
+    background-color:#181818;  
+    color: white;
+}
+.content{
+    background-image: url('back.jpg');
+}
+p{
+    color: white;
+}
+.thumbnail{
+    border:1px solid darkgray;
+}
+* {box-sizing: border-box;}
+body {font-family: Verdana, sans-serif;}
+.mySlides {display: none;}
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+  text-align: center;
+}
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+/* Number text (1/3 etc) */
+.numbertext {
+  color: black;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+  left: 150px;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+/* Fading animation */
+.fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 3s;
+    animation-name: fade;
+    animation-duration: 3s;
+  }
+  
+  @-webkit-keyframes fade {
+    from {opacity: .4} 
+    to {opacity: 1}
+  }
+  
+  @keyframes fade {
+    from {opacity: .4} 
+    to {opacity: 1}
+  }
+
+  .row{
+    padding: 30px;
+  }
