--- a/Module4/Case study/furama-managerment/src/main/resources/templates/demo/list.html
+++ b/Module4/Case study/furama-managerment/src/main/resources/templates/demo/list.html
@@ -1,10 +1,79 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <title>Title</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- Icon -->
+    <link rel="shortcut icon" type="image/png" href="/assets/img/favicon.ico"/>
+
+    <!-- Bootstrap 3.3.7 -->
+    <link rel="stylesheet" href="/assets/css/bootstrap.min.css" />
+
+    <!-- Fontawesome -->
+    <link rel="stylesheet" href="/assets/font-awesome-4.7.0/css/font-awesome.min.css" />
+
+    <!-- DataTables -->
+    <link href="/assets/vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet" />
+
+    <!-- Bootstrap Date picker -->
+    <link href="/assets/vendor/bootstrap-datepicker/bootstrap-datepicker.min.css" rel="stylesheet" />
+
+    <!-- Animation Css -->
+    <link href="/assets/vendor/plugins/animate-css/animate.css" rel="stylesheet" />
+
+    <!-- Main CSS -->
+    <link rel="stylesheet" href="/assets/css/style.css" />
 </head>
 <body>
-$END$
+<div th:replace="~{/layout/footer::navbar_layout}"></div>
+<div th:replace="~{/layout/footer::slide_bar}"></div>
+
+<section class="content">
+    <div class="container-fluid">
+        <!-- Vertical Layout -->
+        <div class="row clearfix">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <div class="card">
+                    <div class="header">
+                        <h2>Customer list</h2>
+                    </div>
+                    <div class="body table-responsive">
+                        <a href="/customer?action=create" class="btn btn-primary btn-custom">
+                            <i class="fa fa-plus-circle" aria-hidden="true"></i> Add new customer
+                        </a>
+                        <form style="float: right">
+                            <input type="text" id="">
+                            <input type="submit" class="btn btn-primary btn-custom" value="Search">
+                        </form>
+                        <table class="table table-striped" id="dataTable-listMember">
+                            <thead>
+                            <tr>
+                                <th>No</th>
+                                <th>ID</th>
+                                <th>Type ID</th>
+                                <th>Name</th>
+                                <th>Birthday</th>
+                                <th>Gender</th>
+                                <th>ID Card</th>
+                                <th>Phone</th>
+                                <th>Email</th>
+                                <th>Address</th>
+                                <th>Actions</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<div th:replace="~{/layout/footer::script_layout}"></div>
+<footer th:replace="~{/layout/footer::layout_footer}"></footer>
 </body>
 </html>
