--- a/Module4/Case study/furama-managerment/src/main/resources/templates/employee/create.html
+++ b/Module4/Case study/furama-managerment/src/main/resources/templates/employee/create.html
@@ -1,10 +1,149 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security" >
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <title>Title</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- Icon -->
+    <link rel="shortcut icon" type="image/png" href="/assets/img/favicon.ico"/>
+
+    <!-- Bootstrap 3.3.7 -->
+    <link rel="stylesheet" href="/assets/css/bootstrap.min.css" />
+
+    <!-- Fontawesome -->
+    <link rel="stylesheet" href="/assets/font-awesome-4.7.0/css/font-awesome.min.css" />
+
+    <!-- DataTables -->
+    <link href="/assets/vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet" />
+
+    <!-- Bootstrap Date picker -->
+    <link href="/assets/vendor/bootstrap-datepicker/bootstrap-datepicker.min.css" rel="stylesheet" />
+
+    <!-- Animation Css -->
+    <link href="/assets/vendor/plugins/animate-css/animate.css" rel="stylesheet" />
+
+    <!-- Main CSS -->
+    <link rel="stylesheet" href="/assets/css/style.css" />
 </head>
 <body>
-$END$
+<div th:replace="~{/layout/footer::navbar_layout}"></div>
+<div th:replace="~{/layout/footer::slide_bar}"></div>
+
+<section class="content">
+    <div class="container-fluid">
+        <!-- Vertical Layout -->
+        <div class="row clearfix">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <div class="card">
+                    <div class="header">
+                        <h2>
+                            Add new employee
+                        </h2>
+                        <a href="/employees">Return List</a>
+                        <th:if test="${error != null}">
+                            <h2 style="color: red" th:text="${error}"></h2>
+                        </th:if>
+                        <div class="body">
+                            <form th:action="@{/employee/create-employee}" th:object="${employee}" method="post">
+
+                                <label for="employee_name">Name Employee: <span style="color: red;"> *</span></label>
+                                <div class="form-group">
+                                    <div class="form-line">
+                                        <input type="text" name="name" class="form-control" placeholder="Customer Name" tabindex="3" id="employee_name" th:field="*{employee_name}"/>
+                                    </div>
+                                </div>
+
+                                <label for="customer_birthday">Birthday: <span style="color: red;"> *</span></label>
+                                <div class="form-group">
+                                    <div class="form-line">
+                                        <input type="date" name="birthday" class="form-control" placeholder="Birthday" tabindex="4" id="customer_birthday" th:field="*{employee_birthday}"/>
+                                    </div>
+                                </div>
+
+                                <label for="customer_id_card">ID Card: <span style="color: red;"> *</span></label>
+                                <div class="form-group">
+                                    <div class="form-line">
+                                        <input type="text" name="id_card" class="form-control" placeholder="ID Card" tabindex="6" id="customer_id_card"  th:field="*{employee_id_card}"/>
+                                    </div>
+                                </div>
+
+                                <label for="employee_salary">Salary: <span style="color: red;"> *</span></label>
+                                <div class="form-group">
+                                    <div class="form-line">
+                                        <input type="number" name="salary" class="form-control" placeholder="Salary" tabindex="6" id="employee_salary"  th:field="*{employee_salary}"/>
+                                    </div>
+                                </div>
+
+                                <label for="employee_phone">Phone: <span style="color: red;"> *</span></label>
+                                <div class="form-group">
+                                    <div class="form-line">
+                                        <input type="text" name="phone" class="form-control" placeholder="Phone" tabindex="7" id="employee_phone"  th:field="*{employee_phone}" />
+                                    </div>
+                                </div>
+
+                                <label for="employee_email">Email: <span style="color: red;"> *</span></label>
+                                <div class="form-group">
+                                    <div class="form-line">
+                                        <input type="text" name="email" class="form-control" placeholder="Email" tabindex="8" id="employee_email"  th:field="*{employee_email}"/>
+                                    </div>
+                                </div>
+
+                                <label for="employee_address">Address: <span style="color: red;"> *</span></label>
+                                <div class="form-group">
+                                    <div class="form-line">
+                                        <input type="text" name="address" class="form-control" placeholder="Address" tabindex="9" id="employee_address"   th:field="*{employee_address}"/>
+                                    </div>
+                                </div>
+
+                                <label for="position_id">Position: <span style="color: red;"> *</span></label>
+                                <div class="form-group">
+                                    <div class="form-line">
+                                        <select class="form-control" th:field="*{position}" id="position_id" >
+                                            <option th:each="item : ${positions}" th:value="${item.position_id}" th:text="${item.position_name}">
+                                            </option>
+                                        </select>
+                                    </div>
+                                </div>
+
+                                <label for="education_id">Education Degree ID: <span style="color: red;"> *</span></label>
+                                <div class="form-group">
+                                    <div class="form-line">
+                                        <select class="form-control" th:field="*{education_degree}" id="education_id" >
+                                            <option th:each="item : ${educations}" th:value="${item.education_degree_id}" th:text="${item.education_degree_name}">
+                                            </option>
+                                        </select>
+                                    </div>
+                                </div>
+
+                                <label for="division_id">Division ID: <span style="color: red;"> *</span></label>
+                                <div class="form-group">
+                                    <div class="form-line">
+                                        <select class="form-control" th:field="*{division}" id="division_id" >
+                                            <option th:each="item : ${divisions}" th:value="${item.division_id}" th:text="${item.division_name}">
+                                            </option>
+                                        </select>
+                                    </div>
+                                </div>
+
+                                <label for="user_id">User: <span style="color: red;"> *</span></label>
+                                <div class="form-group">
+                                    <div class="form-line">
+                                        <input type="text" name="user" class="form-control" placeholder="Address" tabindex="9" id="user_id"   th:field="*{user}" sec:authentication="principal.username"/>
+                                    </div>
+                                </div>
+
+                                <button type="reset" class="btn btn-primary btn-custom" tabindex="10"><i class="fa fa-check" aria-hidden="true"></i> Reset</button>
+                                <button type="submit" class="btn btn-primary btn-custom" tabindex="11"><i class="fa fa-check" aria-hidden="true"></i> Add</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<div th:replace="~{/layout/footer::script_layout}"></div>
 </body>
 </html>
