--- a/Module4/Case study/furama-managerment/src/main/resources/templates/layout/header.html
+++ b/Module4/Case study/furama-managerment/src/main/resources/templates/layout/header.html
@@ -1,10 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+<!-- Icon -->
+<link rel="shortcut icon" type="image/png" href="assets/img/favicon.ico"/>
+
+<!-- Bootstrap 3.3.7 -->
+<link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+
+<!-- Fontawesome -->
+<link rel="stylesheet" href="assets/font-awesome-4.7.0/css/font-awesome.min.css" />
+
+<!-- DataTables -->
+<link href="assets/vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet" />
+
+<!-- Bootstrap Date picker -->
+<link href="assets/vendor/bootstrap-datepicker/bootstrap-datepicker.min.css" rel="stylesheet" />
+
+<!-- Animation Css -->
+<link href="assets/vendor/plugins/animate-css/animate.css" rel="stylesheet" />
+
+<!-- Main CSS -->
+<link rel="stylesheet" href="$assets/css/style.css" />
