--- a/Module4/Case study/furama-managerment/src/main/resources/templates/layout/page-loader.html
+++ b/Module4/Case study/furama-managerment/src/main/resources/templates/layout/page-loader.html
@@ -1,10 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<!-- Page Loader -->
+<div class="page-loader-wrapper" >
+    <div class="loader">
+        <div class="preloader">
+            <div class="spinner-layer pl-light-blue">
+                <div class="circle-clipper left">
+                    <div class="circle"></div>
+                </div>
+                <div class="circle-clipper right">
+                    <div class="circle"></div>
+                </div>
+            </div>
+        </div>
+        <p>LOADING...</p>
+    </div>
+</div>
+<!-- END Page Loader -->
