--- a/Module4/Case study/furama-managerment/src/main/resources/templates/demo/list.html
+++ b/Module4/Case study/furama-managerment/src/main/resources/templates/demo/list.html
@@ -39,8 +39,8 @@
                     <div class="header">
                         <h2>Customer list</h2>
                     </div>
-                    <div class="body table-responsive">
-                        <a href="/customer?action=create" class="btn btn-primary btn-custom">
+                    <div class="body table-responsive" data-bs-toggle="modal" data-bs-target="#addModal">
+                        <a class="btn btn-primary btn-custom">
                             <i class="fa fa-plus-circle" aria-hidden="true"></i> Add new customer
                         </a>
                         <form style="float: right">
